--- a/style.css
+++ b/style.css
@@ -8,8 +8,8 @@ body {
     margin-top: 50px;
     border-radius: 15px;
     display: flex;
-    width: 60%;
-    height: 102vh;
+    width: 70%;
+    height: 80%;
     background-color: white;
 }
 
@@ -23,21 +23,21 @@ body {
 
 .user-feild {
     margin-left: 30px;
-    width: 400px;
-    height: 420px;
+    width: 300px;
+    height: 320px;
     background-color: white;
     border-radius: 5px;
     box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.4);
 }
 
 .email-address {
-    padding-top: 60px;
-    margin-left: 20px;
+    padding-top: 20px;
+    margin-left: 10px;
 }
 
 #address {
     font-size: 15px;
-    padding-left: 50px;
+    padding-left: 30px;
     color: rgba(0, 0, 0, 0.5);
     font-weight: bold;
 }
@@ -67,7 +67,7 @@ body {
 
 .image {
     width: 100%;
-    margin-top: 200px;
+    margin-top: 180px;
     margin-left: 5px;
 }
 
@@ -84,8 +84,8 @@ p {
 }
 
 .password-feild {
-    margin-top: 20px;
-    margin-left: 70px;
+    margin-top: 10px;
+    margin-left: 40px;
 }
 
 #password-heading {
@@ -104,6 +104,7 @@ p {
 .lock-icon {
     font-size: 20px;
     color: rgba(0, 0, 0, 0.5);
+    padding-left: 10px;
 }
 
 #password {
@@ -116,8 +117,8 @@ p {
 }
 
 .password_feild {
-    margin-top: 20px;
-    margin-left: 70px;
+    margin-top: 10px;   
+    margin-left: 40px;
 }
 
 #password_heading {
@@ -136,6 +137,7 @@ p {
 .lock_icon {
     font-size: 20px;
     color: rgba(0, 0, 0, 0.5);
+    padding-left: 10px;
 }
 
 #Password {
@@ -148,8 +150,8 @@ p {
 }
 
 .telephone {
-    margin-top: 20px;
-    margin-left: 70px;
+    margin-top: 10px;
+    margin-left: 40px;
 }
 
 #contact-heading {
@@ -168,12 +170,13 @@ p {
 .telephone-icon {
     font-size: 20px;
     color: rgba(0, 0, 0, 0.5);
+    padding-left: 10px;
 }
 
 #contact {
     width: 300px;
     font-size: 16px;
-    height: 50px;
+    height: 30px;
     outline: 0;
     border: 0;
     padding-left: 30px;
@@ -214,6 +217,7 @@ p {
     display: flex;
     align-items: center;
     gap: 7px;
+    padding-left: 20px;
 }
 
 .google-img {
